# perplexing

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml  whoosh.md
data/raw/: dad_jokes.txt
notebooks/: README.md  anthropic_ai.ipynb  anthropic_ai_ToT.ipynb  perplexity_ai.ipynb  perplexity_ai_v001.ipynb  perplexity_ai_v002.ipynb  perplexity_ai_v003.ipynb  perplexity_ai_v004.ipynb  perplexity_ai_v005.ipynb
src/llm/: perplexity_ai.py  search_secrets.py
