[tool.poetry]
name = "llm"
version = "0.1.0"
description = "the ZeroToMastery version"
authors = ["KiloJon <social@kjon.life>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "llm", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.342"
pinecone-client = "^2.2.4"
openai = "^1.3.6"
perplexipy = "^1.0.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
